objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AV_Rental__c</fullName>
        <label>AV Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_BizDev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (BizDev)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Seminar_Cost__c</fullName>
        <formula>Room_Rental__c +  AV_Rental__c +  Taxes__c  +  Travel_Cost__c +  Per_Diem__c +  Visa_Application_Cost__c +  Client_Speaker__c +  Folders_Printing__c +  Shipping__c +  F_B__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Seminar Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Group__c</fullName>
        <label>Ad Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adrian Segar</fullName>
                </value>
                <value>
                    <fullName>Anna Huddleston</fullName>
                </value>
                <value>
                    <fullName>Diana Rowe</fullName>
                </value>
                <value>
                    <fullName>Jenise Fryat</fullName>
                </value>
                <value>
                    <fullName>Julie Catalano</fullName>
                </value>
                <value>
                    <fullName>MarketingProfs</fullName>
                </value>
                <value>
                    <fullName>Patti Shock</fullName>
                </value>
                <value>
                    <fullName>SMA</fullName>
                </value>
                <value>
                    <fullName>Terri Hardin</fullName>
                </value>
                <value>
                    <fullName>Toby Saltzman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event Mid Market</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>All Event Cloud</fullName>
                </value>
                <value>
                    <fullName>Cross Cloud</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>Event Mid Market and Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CID_Placement__c</fullName>
        <label>CID Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Annotation</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Event</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Hospitality</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Inquisium</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Survey</fullName>
                </value>
                <value>
                    <fullName>Chat Link</fullName>
                </value>
                <value>
                    <fullName>Cvent Webinar</fullName>
                </value>
                <value>
                    <fullName>Display Banner Ad</fullName>
                </value>
                <value>
                    <fullName>eBook Link</fullName>
                </value>
                <value>
                    <fullName>Email: Body</fullName>
                </value>
                <value>
                    <fullName>Email: Signature</fullName>
                </value>
                <value>
                    <fullName>In-App Push Notification</fullName>
                </value>
                <value>
                    <fullName>In-Stream Ad</fullName>
                </value>
                <value>
                    <fullName>Internal Banner Ad</fullName>
                </value>
                <value>
                    <fullName>Internal CTA</fullName>
                </value>
                <value>
                    <fullName>NA - ADC</fullName>
                </value>
                <value>
                    <fullName>NA-IR</fullName>
                </value>
                <value>
                    <fullName>NA - Live Event</fullName>
                </value>
                <value>
                    <fullName>NA -Parent</fullName>
                </value>
                <value>
                    <fullName>NA-Phone Call</fullName>
                </value>
                <value>
                    <fullName>NA-Sales Blitz</fullName>
                </value>
                <value>
                    <fullName>Newsletter: Body</fullName>
                </value>
                <value>
                    <fullName>OD/PS Website Calendar Link</fullName>
                </value>
                <value>
                    <fullName>On-Page Form</fullName>
                </value>
                <value>
                    <fullName>onTour In-App Banner Ad</fullName>
                </value>
                <value>
                    <fullName>Overlay</fullName>
                </value>
                <value>
                    <fullName>Partner Webinar</fullName>
                </value>
                <value>
                    <fullName>Partner Website: Banner Ad</fullName>
                </value>
                <value>
                    <fullName>Partner Website: Text Link</fullName>
                </value>
                <value>
                    <fullName>PDF Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_ID_18_digit__c</fullName>
        <formula>Id &amp; 

MID( 

    "ABCDEFGHIJKLMNOPQRSTUVWXYZ012345", 

    MIN(FIND(MID(Id, 5, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 16 + 

    MIN(FIND(MID(Id, 4, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 8 + 

    MIN(FIND(MID(Id, 3, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 4 + 

    MIN(FIND(MID(Id, 2, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 2 + 

    MIN(FIND(MID(Id, 1, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 1 + 1, 

    1) &amp; 

MID( 

    "ABCDEFGHIJKLMNOPQRSTUVWXYZ012345", 

    MIN(FIND(MID(Id, 10, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 16 + 

    MIN(FIND(MID(Id, 9, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 8 + 

    MIN(FIND(MID(Id, 8, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 4 + 

    MIN(FIND(MID(Id, 7, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 2 + 

    MIN(FIND(MID(Id, 6, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 1 + 1, 

    1) &amp; 

MID( 

    "ABCDEFGHIJKLMNOPQRSTUVWXYZ012345", 

    MIN(FIND(MID(Id, 15, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 16 + 

    MIN(FIND(MID(Id, 14, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 8 + 

    MIN(FIND(MID(Id, 13, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 4 + 

    MIN(FIND(MID(Id, 12, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 2 + 

    MIN(FIND(MID(Id, 11, 1), "ABCDEFGHIJKLMNOPQRSTUVWXYZ"), 1) * 1 +
 1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Lead_Attendee_Feedback__c</fullName>
        <label>Campaign/Lead/Attendee Feedback</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Speaker__c</fullName>
        <label>Client Speaker Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Benchmark Study</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Event</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Hospitality</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Inquisium</fullName>
                </value>
                <value>
                    <fullName>Blog Post: Meeting Minds</fullName>
                </value>
                <value>
                    <fullName>Case Studies</fullName>
                </value>
                <value>
                    <fullName>Comparison Chart</fullName>
                </value>
                <value>
                    <fullName>Consultation Form</fullName>
                </value>
                <value>
                    <fullName>Contest</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>eNewsletter</fullName>
                </value>
                <value>
                    <fullName>Expert Interview</fullName>
                </value>
                <value>
                    <fullName>FAQ Page</fullName>
                </value>
                <value>
                    <fullName>Free Trial Form</fullName>
                </value>
                <value>
                    <fullName>Hosted PDF</fullName>
                </value>
                <value>
                    <fullName>Infographic</fullName>
                </value>
                <value>
                    <fullName>Instructional Video</fullName>
                </value>
                <value>
                    <fullName>Interactive 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Marketing Video</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Press release</fullName>
                </value>
                <value>
                    <fullName>Product Guide</fullName>
                </value>
                <value>
                    <fullName>Product Specs</fullName>
                </value>
                <value>
                    <fullName>Product Video</fullName>
                </value>
                <value>
                    <fullName>Recorded Demo</fullName>
                </value>
                <value>
                    <fullName>Recorded Webinar</fullName>
                </value>
                <value>
                    <fullName>Research Findings</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Sample Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPV</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid: CPC</fullName>
                </value>
                <value>
                    <fullName>Paid: CPM</fullName>
                </value>
                <value>
                    <fullName>Paid: CPV</fullName>
                </value>
                <value>
                    <fullName>Paid: Flat rate</fullName>
                </value>
                <value>
                    <fullName>Reciprocal</fullName>
                </value>
                <value>
                    <fullName>TOS</fullName>
                </value>
                <value>
                    <fullName>Trade of Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <label>Event Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Codes__c</fullName>
        <label>Event Codes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_date__c</fullName>
        <label>Event Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_B__c</fullName>
        <label>F&amp;B</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feedback_Comments__c</fullName>
        <label>Feedback Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Venue Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Folders_Printing__c</fullName>
        <label>Folders Printing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed__c</fullName>
        <label>Guaranteed No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture &amp; Mining</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Computers &amp; Electronics</fullName>
                </value>
                <value>
                    <fullName>Conglomerate</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy &amp; Utilities</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare, Pharmaceuticals &amp; Biotech</fullName>
                </value>
                <value>
                    <fullName>Hospitality &amp; Restaurants</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Entertainment </fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Real Estate &amp; Construction </fullName>
                </value>
                <value>
                    <fullName>Retail   </fullName>
                </value>
                <value>
                    <fullName>Software &amp; Internet</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation &amp; Storage</fullName>
                </value>
                <value>
                    <fullName>Travel, Recreation &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Wholesale &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Computers Electronics Software Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <label>Invoiced No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <label>Landing Page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Microsite</fullName>
                </value>
                <value>
                    <fullName>App Download Info</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>CSN/DG Search Results Page</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Agenda Builder</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Certification</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Site</fullName>
                </value>
                <value>
                    <fullName>Cvent Login Screen</fullName>
                </value>
                <value>
                    <fullName>Cvent Plannie Site</fullName>
                </value>
                <value>
                    <fullName>Elite Meetings Magazine</fullName>
                </value>
                <value>
                    <fullName>EMI Search Results Page</fullName>
                </value>
                <value>
                    <fullName>Form: Account Signup</fullName>
                </value>
                <value>
                    <fullName>Form: Amazon Demo</fullName>
                </value>
                <value>
                    <fullName>Form: Become an Advocate</fullName>
                </value>
                <value>
                    <fullName>Form: Become A Partner</fullName>
                </value>
                <value>
                    <fullName>Form: CC Event Setup</fullName>
                </value>
                <value>
                    <fullName>Form: Certification</fullName>
                </value>
                <value>
                    <fullName>Form: Claim Promo/Offer</fullName>
                </value>
                <value>
                    <fullName>Form: Customer Success Group</fullName>
                </value>
                <value>
                    <fullName>Form: Cvent Connect Attend</fullName>
                </value>
                <value>
                    <fullName>Form: Cvent Connect Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Form: Cvent Connect Magazine</fullName>
                </value>
                <value>
                    <fullName>Form: Cvent Connect Pre Register</fullName>
                </value>
                <value>
                    <fullName>Form: Cvent Connect Registration</fullName>
                </value>
                <value>
                    <fullName>Form: Cvent Connect Sponsor</fullName>
                </value>
                <value>
                    <fullName>Form: Demo 1:1</fullName>
                </value>
                <value>
                    <fullName>Form: Free Trial</fullName>
                </value>
                <value>
                    <fullName>Form: Gated Content</fullName>
                </value>
                <value>
                    <fullName>Form: General Contact</fullName>
                </value>
                <value>
                    <fullName>Form: Group  Business Forum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location1__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of Tradeshow</description>
        <label>Tradeshow Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIT__c</fullName>
        <label>MIT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMA__c</fullName>
        <label>MMA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AB-Calgary</fullName>
                </value>
                <value>
                    <fullName>AB-Edmonton</fullName>
                </value>
                <value>
                    <fullName>Africa-Capetown</fullName>
                </value>
                <value>
                    <fullName>Africa-Johannesburg</fullName>
                </value>
                <value>
                    <fullName>AL-Birmingham</fullName>
                </value>
                <value>
                    <fullName>AL-Huntsville</fullName>
                </value>
                <value>
                    <fullName>AL-Mobile</fullName>
                </value>
                <value>
                    <fullName>AR-Little Rock</fullName>
                </value>
                <value>
                    <fullName>AU-Brisbane</fullName>
                </value>
                <value>
                    <fullName>AU-Melbourne</fullName>
                </value>
                <value>
                    <fullName>AU-Perth</fullName>
                </value>
                <value>
                    <fullName>Austria-Vienna</fullName>
                </value>
                <value>
                    <fullName>AU-Sydney</fullName>
                </value>
                <value>
                    <fullName>AZ-Phoenix</fullName>
                </value>
                <value>
                    <fullName>AZ-Scottsdale</fullName>
                </value>
                <value>
                    <fullName>AZ-Tucson</fullName>
                </value>
                <value>
                    <fullName>BC-Vancouver</fullName>
                </value>
                <value>
                    <fullName>BC-Victoria</fullName>
                </value>
                <value>
                    <fullName>BC-Whistler</fullName>
                </value>
                <value>
                    <fullName>Belgium-Brussels</fullName>
                </value>
                <value>
                    <fullName>CA-Anaheim</fullName>
                </value>
                <value>
                    <fullName>CA-Berkeley</fullName>
                </value>
                <value>
                    <fullName>CA-Costa Mesa</fullName>
                </value>
                <value>
                    <fullName>CA-Fremont</fullName>
                </value>
                <value>
                    <fullName>CA-Fresno</fullName>
                </value>
                <value>
                    <fullName>CA-Huntington Beach</fullName>
                </value>
                <value>
                    <fullName>CA-Irvine</fullName>
                </value>
                <value>
                    <fullName>CA-Laguna Beach</fullName>
                </value>
                <value>
                    <fullName>CA-Long Beach</fullName>
                </value>
                <value>
                    <fullName>CA-Los Angeles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ad Group Level Tracking</fullName>
                </value>
                <value>
                    <fullName>Broad</fullName>
                </value>
                <value>
                    <fullName>Broad Modified</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Phrase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(Session_Date__c),
1, "January",
2, "February",
3, "March",
4, "April",
5, "May",
6, "June",
7, "July",
8, "August",
9, "September",
10, "October",
11, "November",
12, "December",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_of_Campaign__c</fullName>
        <formula>CASE(MONTH(StartDate),
1, "January",
2, "February",
3, "March",
4, "April",
5, "May",
6, "June",
7, "July",
8, "August",
9, "September",
10, "October",
11, "November",
12, "December",
"") &amp; " " &amp; TEXT(Year(StartDate))</formula>
        <label>Month of Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 on 1 Demo</fullName>
                </value>
                <value>
                    <fullName>Account Activation</fullName>
                </value>
                <value>
                    <fullName>ADC Grouping</fullName>
                </value>
                <value>
                    <fullName>App Download</fullName>
                </value>
                <value>
                    <fullName>Attend CSG</fullName>
                </value>
                <value>
                    <fullName>Attendee Registration</fullName>
                </value>
                <value>
                    <fullName>Attend HSG</fullName>
                </value>
                <value>
                    <fullName>Attend Online Demo</fullName>
                </value>
                <value>
                    <fullName>Attend Product Seminar</fullName>
                </value>
                <value>
                    <fullName>Attend Webinar</fullName>
                </value>
                <value>
                    <fullName>Become an Advocate</fullName>
                </value>
                <value>
                    <fullName>Become A Partner</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Claim Promo/Offer</fullName>
                </value>
                <value>
                    <fullName>Client Cross-Sell</fullName>
                </value>
                <value>
                    <fullName>Client Engagement</fullName>
                </value>
                <value>
                    <fullName>Client Upsell</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Content Download</fullName>
                </value>
                <value>
                    <fullName>Convert Abandoned Reg</fullName>
                </value>
                <value>
                    <fullName>Convert Free Trial users</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch Quick Create Account</fullName>
                </value>
                <value>
                    <fullName>Cvent Certification</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Build Agenda</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Exhibitor Signup</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Registration</fullName>
                </value>
                <value>
                    <fullName>Cvent Exchange Signup</fullName>
                </value>
                <value>
                    <fullName>Form Fill</fullName>
                </value>
                <value>
                    <fullName>Form Submit</fullName>
                </value>
                <value>
                    <fullName>Free Trial Signup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPC_Campaign__c</fullName>
        <label>PPC Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <label>Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>